--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
   <table>
     <tr>
-      <td><img src="C:\Users\reshma\Downloads\squid (1)-modified.png" alt="Reshma profile"></td>
+      <td><img src="https://app.photobucket.com/u/reyvini" alt="Reshma profile"></td>
       <td>
         <h1>Reshma V</h1>
         <p><em>Founder and CEO of <strong>Metaspace private limited</strong> </em></p>
