--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
   <table>
     <tr>
-      <td><img src="https://imgur.com/Y0XvJ1E" alt="Reshma profile"></td>
+      <td><img src="C:\Users\reshma\OneDrive\Pictures\squid (1).jpg" alt="Reshma profile"></td>
       <td>
         <h1>Reshma V</h1>
         <p><em>Founder and CEO of <strong>Metaspace private limited</strong> </em></p>
